Bug 15573 - panic in dreplsrv_op_pull_source_apply_changes_trigger
Summary: panic in dreplsrv_op_pull_source_apply_changes_trigger
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.19.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-07 16:24 UTC by Stefan Metzmacher
Modified: 2024-06-19 14:34 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-20-test (2.74 KB, text/plain)
2024-05-29 14:20 UTC, Stefan Metzmacher
slow: review+
Details
Patch for v4-19-test (2.74 KB, text/plain)
2024-05-29 14:20 UTC, Stefan Metzmacher
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2024-02-07 16:24:32 UTC
I have customer backtraces showing that 'drsuapi' is NULL in
dreplsrv_op_pull_source_get_changes_trigger() called from the
WERR_DS_DRA_SCHEMA_MISMATCH retry case of dreplsrv_op_pull_source_apply_changes_trigger(), while 'drsuapi' was
a valid pointer there.

From reading the code I don't understand how this can happen,
but it does very often on RODCs.
Comment 1 Samba QA Contact 2024-05-22 05:27:11 UTC
This bug was referenced in samba master:

83030780285290ecf64b57c1744634379b68ea01
Comment 2 Stefan Metzmacher 2024-05-29 14:20:36 UTC
Created attachment 18308 [details]
Patch for v4-20-test
Comment 3 Stefan Metzmacher 2024-05-29 14:20:59 UTC
Created attachment 18309 [details]
Patch for v4-19-test
Comment 4 Ralph Böhme 2024-05-29 14:56:49 UTC
Reassigning to Jule for inclusion in 4.19 and 4.20.
Comment 5 Samba QA Contact 2024-05-29 19:26:15 UTC
This bug was referenced in samba v4-19-test:

3b922dd575919fd08c2b98249691ea11cb7ffe56
Comment 6 Samba QA Contact 2024-05-30 10:58:30 UTC
This bug was referenced in samba v4-20-test:

0d0fbf2bb860f3cbc29c74b4ff8c9b3f65778152
Comment 7 Samba QA Contact 2024-06-10 15:31:43 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.7):

3b922dd575919fd08c2b98249691ea11cb7ffe56
Comment 8 Samba QA Contact 2024-06-19 14:34:59 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.2):

0d0fbf2bb860f3cbc29c74b4ff8c9b3f65778152